--- a/src/main/webapp/css/enregistrement.css
+++ b/src/main/webapp/css/enregistrement.css
@@ -1,24 +1,4 @@
-/* enable absolute positioning */
-.inner-addon {
-    position: relative;
-}
-
-/* style icon */
-.inner-addon .fa {
-    position: absolute;
-    padding: 10px;
-    pointer-events: none;
-}
-
-/* align icon */
-.left-addon .fa-left { left:  0px;}
-.right-addon .fa-right { right: 0px;}
-
-/* add padding  */
-.left-addon input  { padding-left:  30px; }
-.right-addon input { padding-right: 30px; }
-
-.card {
+.panel .panel-default{
     margin-top: 20%;
 
 }
@@ -26,29 +6,48 @@
 .color-blue {color: #1E90FF;}
 .color-grey {color: #A9A9A9;}
 .color-red {color: #B22222;}
-.inscriptionLine {
-    border-right: thin hidden #D3D3D3;
-    border-bottom: thin solid #D3D3D3;
-    font-size:150%;
+
+.fontsize {
+    font-size: 150%;
 }
-.connexionLine {
-    border-left: thin solid #D3D3D3;
-    border-bottom: thin solid #D3D3D3;
-    font-size:150%;
+/* enable absolute positioning */
+.inner-addon {
+    position: relative;
 }
 
+/* style icon */
+.inner-addon .glyphicon {
+    position: absolute;
+    padding: 10px;
+    pointer-events: none;
+}
+
+/* align icon */
+.left-addon .glyphicon-left { left:  0px;}
+.right-addon .glyphicon-right { right: 0px;}
+
+/* add padding  */
+.left-addon input  { padding-left:  30px; }
+.right-addon input { padding-right: 30px; }
 .password{
     position: relative;
 }
 
-.password .fa-eye,#password2 .fa-eye {
+.password .glyphicon-eye-open,#password2 .glyphicon-eye-open {
 
     right: 10px;
     position: absolute;
     top: 12px;
     cursor:pointer;
 }
-.password .fa-lock,#password2 .fa-lock {
+.password .glyphicon-eye-close,#password2 .glyphicon-eye-close {
+
+    right: 10px;
+    position: absolute;
+    top: 12px;
+    cursor:pointer;
+}
+.password .glyphicon-lock,#password2 .glyphicon-lock {
 
     left: 10px;
     position: absolute;
@@ -59,4 +58,46 @@
 .password input[type="password"]{
     padding-right: 30px;
     padding-left: 30px;
+}
+.password input[type="text"]{
+    padding-right: 30px;
+    padding-left: 30px;
+}
+
+
+.tab-group {
+    list-style: none;
+    padding: 0;
+    margin: 0 0 40px 0;
+}
+.tab-group:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+.tab-group li a {
+    display: block;
+    text-decoration: none;
+    padding: 15px;
+    background: rgba(160, 179, 176, 0.25);
+    color: #a0b3b0;
+    font-size: 20px;
+    float: left;
+    width: 50%;
+    text-align: center;
+    cursor: pointer;
+    -webkit-transition: .5s ease;
+    transition: .5s ease;
+}
+.tab-group li a:hover {
+    background: #8db9df;
+    color: #ffffff;
+}
+.tab-group .active a {
+    background: #428bca;
+    color: #ffffff;
+}
+
+.tab-content > div:last-child {
+    display: none;
 }
