--- a/src/main/webapp/css/addTrainingTopic.css
+++ b/src/main/webapp/css/addTrainingTopic.css
@@ -17,7 +17,6 @@ legend.fieldset-border{
     background-color: blue;
     color: white;
 }
-.ligne{
-
-
+.form-control-feedback{
+    pointer-events: auto;
 }
