[US#GF3] Validations

--- a/src/main/webapp/css/ajouterformation.css
+++ b/src/main/webapp/css/ajouterformation.css
@@ -21,3 +21,7 @@ legend.fieldset-border{
 
 
 }
+.color-green { color: #4cae4c}
+.color-blue {color: #1E90FF;}
+.color-grey {color: #A9A9A9;}
+.color-red {color: #B22222;}
