--- a/src/main/webapp/css/addTrainingTopic.css
+++ b/src/main/webapp/css/addTrainingTopic.css
@@ -54,7 +54,6 @@ table td {
     border-bottom:1px solid #E1E1E1;
     width: 100%;
     text-align: center;
-    background: #fff;
     padding-top:20px;
     font-size:12px;
     font-family:arial;
@@ -63,11 +62,15 @@ table td {
 
 #addFormation input[type=submit]{
     font-weight: bold;
-    width:100%;
-    max-width:50%;
+    width:120px;
+    height:35px;
+    max-width:170px;
 
 
 }
+
+
+
 
 
 
