--- a/src/main/webapp/css/addTrainingTopic.css
+++ b/src/main/webapp/css/addTrainingTopic.css
@@ -47,8 +47,7 @@ table td {
 }
 
 .deletetopic{
-    width: 100%;
-    text-align: center;
+    text-align: right;
     padding-top:20px;
     font-size:12px;
     font-family:arial;
@@ -67,20 +66,24 @@ a.changecolor{
 
 #addFormation button{
     font-weight: bold;
-    width:160px;
+    width:100%;
     height:35px;
-    max-width:170px;
-    font-size: 10px;
+    font-size: 80%;
 
 
 
 }
+
 
 .tabnone{
     border:none;
 }
 
-
+table.fix{
+    table-layout: fixed;
+    margin:0;
+    border-collapse: collapse;
+}
 
 
 
