[US#GF17] Changement des couleurs pour être adapté aux couleurs de la page index.html

--- a/src/main/webapp/css/addTrainingTopic.css
+++ b/src/main/webapp/css/addTrainingTopic.css
@@ -5,7 +5,7 @@ legend{
     margin-left: 25px;
     padding: 0 10px;
     border-bottom: none;
-    background-color: #0F1B65;
+    background-color: #428bca;
     color: white;
 }
 
