--- a/src/main/webapp/css/addTrainingTopic.css
+++ b/src/main/webapp/css/addTrainingTopic.css
@@ -83,6 +83,10 @@ table.fix{
     table-layout: fixed;
     margin:0;
     border-collapse: collapse;
+    display: table;
+    width: 100%;
+    height: 100%;
+
 }
 
 
