--- a/src/main/webapp/css/addTrainingTopic.css
+++ b/src/main/webapp/css/addTrainingTopic.css
@@ -70,12 +70,10 @@ a.changecolor{
     height:35px;
     font-size: 80%;
 
-
-
 }
 
 
-.tabnone{
+.tabnonborder{
     border:none;
 }
 
@@ -83,9 +81,6 @@ table.fix{
     table-layout: fixed;
     margin:0;
     border-collapse: collapse;
-    display: table;
-    width: 100%;
-    height: 100%;
 
 }
 
