[US#GF3-NP] Refactor: Ajout de v-if v-else-if pour l'affichage des messages d'erreurs

--- a/src/main/webapp/css/addTrainingTopic.css
+++ b/src/main/webapp/css/addTrainingTopic.css
@@ -31,9 +31,7 @@ table td {
 
 .td-right{
     border-left: 1px solid #dcdcdc;
-    height: 100px;
-    position: absolute;
-    margin-left: 625px;
+    position: relative;
 }
 
 .color-green { color: #4cae4c}
