--- a/src/main/webapp/css/addTrainingTopic.css
+++ b/src/main/webapp/css/addTrainingTopic.css
@@ -19,7 +19,8 @@ legend{
 }
 
 table{
-    border:1px solid black;
+    border:1px solid #dcdcdc;
+    border-radius: 10px;
 
 }
 table td {
@@ -31,7 +32,6 @@ table td {
 
 .td-right{
     border-left: 1px solid #dcdcdc;
-    position: relative;
 }
 
 .color-green { color: #4cae4c}
