--- a/src/main/webapp/css/addTrainingTopic.css
+++ b/src/main/webapp/css/addTrainingTopic.css
@@ -123,3 +123,86 @@ option {
     line-height: 28px;
 
 }
+
+nav {
+    text-align: center;
+}
+
+nav ul {
+    margin-left: 0;
+    padding-left: 0;
+    list-style: none;
+    position: relative;
+    display: inline-table;
+}
+
+nav ul ul {
+    display: none;
+}
+
+nav ul li:hover > ul {
+    display: block;
+}
+
+nav ul li {
+    float: left;
+    text-align: left;
+    border-bottom: 3px solid #428bca;
+}
+
+nav ul li:hover {
+    background: #f2f2f2;
+}
+
+nav ul li a {
+    display: block;
+    padding: 15px 10px;
+    color: #2a2a2a;
+    text-decoration: none;
+}
+
+nav ul ul {
+    border-radius: 0px;
+    padding: 0;
+    position: absolute;
+    top: 100%;
+}
+
+nav ul ul li {
+    float: none;
+    border-bottom: 2px solid #eaeaea;
+    position: relative;
+}
+
+nav ul ul li a {
+    padding: 15px 10px;
+    color: #838383;
+}
+
+nav ul ul li a:hover {
+    background: #428bca;
+    color: #fff;
+}
+
+#down-triangle {
+    float: right;
+    width: 0;
+    height: 0;
+    margin-top: 6px;
+    margin-left: 10px;
+    border-top: 10px solid #428bca;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+}
+
+.circle {
+    float: right;
+    display: inline;
+    width: 10px;
+    height: 10px;
+    margin-top: 5px;
+    border: 3px solid #428bca;
+    -moz-border-radius: 70px;
+    -webkit-border-radius: 70px;
+    border-radius: 70px;
+}
