--- a/src/main/webapp/css/addTrainingTopic.css
+++ b/src/main/webapp/css/addTrainingTopic.css
@@ -384,6 +384,7 @@ ul {
     height: 30px;
     text-align: center;
     line-height: 30px;
+    color: #333;
 }
 .date-list li {
     font-family: Roboto;
