[US#GF5] Validation add session

--- a/src/main/webapp/css/addTrainingTopic.css
+++ b/src/main/webapp/css/addTrainingTopic.css
@@ -49,6 +49,12 @@ table td {
     border-top: none;
 }
 
+table.errorMessageAddSession{
+    border:none;
+    padding-top: 0px;
+}
+
+
 .deletetopic{
     text-align: right;
     padding-top:20px;
