--- a/src/main/webapp/css/addTrainingTopic.css
+++ b/src/main/webapp/css/addTrainingTopic.css
@@ -749,23 +749,25 @@ ul {
     display: flex;
     flex-flow: row nowrap;
     width: 90%;
+
 }
 .arrow-left{    flex: 1;
-    font-size: 20px;
+    margin-left: 25px;
+    font-size: 15px;
     line-height: 2;
     background-color: #fff;
     text-align: center;
     cursor: pointer;}
 .arrow-right {
     flex: 1;
-    font-size: 20px;
+    font-size: 15px;
     line-height: 2;
     background-color: #fff;
     text-align: center;
     cursor: pointer;
 }
 .year-range {
-    font-size: 20px;
+    font-size: 15px;
     float:left;
     line-height: 2;
     flex: 3;
@@ -787,7 +789,7 @@ ul {
     font-family: Roboto, sans-serif;
     flex: 1;
     text-align: center;
-    font-size: 20px;
+    font-size: 15px;
     line-height: 2;
     cursor: pointer;
     background-color: #fff;}
@@ -796,7 +798,7 @@ ul {
     font-family: Roboto, sans-serif;
     flex: 1;
     text-align: center;
-    font-size: 20px;
+    font-size: 15px;
     line-height: 2;
     cursor: pointer;
     background-color: #fff;
@@ -939,7 +941,7 @@ ul {
     width: 30px;
     height: 30px;
     text-align: center;
-    line-height: 30px;
+    line-height: 25px;
 }
 .date-list {
     width: 100%;
@@ -956,13 +958,13 @@ ul {
     width: 30px;
     height: 30px;
     text-align: center;
-    line-height: 30px;
+    line-height: 25px;
     color: #333;
 }
 .date-list li {
     font-family: Roboto, sans-serif;
     width: 30px;
-    height: 30px;
+    height: 25px;
     text-align: center;
     line-height: 30px;
 }
