--- a/src/main/webapp/css/registerTrainingCollaborator.css
+++ b/src/main/webapp/css/registerTrainingCollaborator.css
@@ -1,7 +1,7 @@
 #trainingContainer {
     border:1px solid #dcdcdc;
     border-radius: 10px;
-    height:600px;
+    height:700px;
     width: 100%;
     overflow-y:hidden;
     overflow-x:hidden;
@@ -49,3 +49,8 @@ button + p {
     background-color: rgba(66, 139, 202,0.8) !important;
 }
 
+#scroll{
+    height: 500px;
+    overflow: hidden;
+    z-index: 1000;
+}
