[develop] Correction Hover et Rédirection

--- a/src/main/webapp/css/registerTrainingCollaborator.css
+++ b/src/main/webapp/css/registerTrainingCollaborator.css
@@ -55,3 +55,9 @@ button + p {
     overflow: hidden;
     z-index: 5;
 }
+
+.showmeonhover { display: none; }
+
+.alwaysshowme:hover .showmeonhover {
+    display: inline;
+}
