--- a/src/main/webapp/css/assignCollaborator.css
+++ b/src/main/webapp/css/assignCollaborator.css
@@ -1,8 +1,24 @@
 #assignCollaborator {
     border:1px solid #dcdcdc;
     border-radius: 10px;
-    height:562px;
-    width: 100%;
+    height:555px;
+    width: 95%;
     padding:20px;
     margin-left:15px;
 }
+.panel-body {
+    height:300px;
+    width: 100%;
+}
+.searchField .glyphicon-search {
+    right: 35px;
+    position: absolute;
+    top: 11px;
+    cursor:pointer;
+    z-index: 1000;
+}
+.searchField{
+    margin-left: -42px;
+    width: 138%;
+}
+
