[US#GF6] Gestion des demandes de formations et recherche des collaborateurs et les faire  enregistrer.

--- a/src/main/webapp/css/assignCollaborator.css
+++ b/src/main/webapp/css/assignCollaborator.css
@@ -22,3 +22,16 @@
     width: 138%;
 }
 
+.green {
+    color: green;
+    top: 20px;
+}
+.blue{
+    color: blue;
+    top: 20px;
+}
+.tabCentring {
+    border: none;
+    width: 200px;
+
+}
