--- a/src/main/webapp/css/assignCollaborator.css
+++ b/src/main/webapp/css/assignCollaborator.css
@@ -35,3 +35,12 @@
     width: 200px;
 
 }
+
+div.disabled
+{
+    pointer-events: none;
+    /* for "disabled" effect */
+    opacity: 0.5;
+    background: #CCC;
+}
+
