--- a/src/main/webapp/css/addTrainingTopic.css
+++ b/src/main/webapp/css/addTrainingTopic.css
@@ -77,18 +77,22 @@ a.changecolor{
     color: black;
 }
 
-#addFormation button{
+#addFormation button {
     font-weight: bold;
-    width:100%;
-    height:35px;
+    width: 100%;
+    height: 35px;
     font-size: 80%;
 
 }
 
-
-.tabnonborder{
-    border:none;
+#addFormation button:hover {
+    background-color: #E6E6E6;
 }
+
+.tabnonborder {
+    border: none;
+}
+
 table.fix{
     table-layout: fixed;
     border-collapse: collapse;
