[US#GF24] HTML global formation à venir terminé.

--- a/src/main/webapp/css/addTrainingTopic.css
+++ b/src/main/webapp/css/addTrainingTopic.css
@@ -115,7 +115,7 @@ option {
     color: black;
 }
 
-.glyphicon-pencil{
+#glyphiconpencil .glyphicon-pencil{
     position: absolute;
     right: 97%;
     top: 56%;
