--- a/src/main/webapp/css/assignCollaborator.css
+++ b/src/main/webapp/css/assignCollaborator.css
@@ -1,7 +1,7 @@
 #assignCollaborator {
     border:1px solid #dcdcdc;
     border-radius: 10px;
-    height:620px;
+    height:100%;
     width: 95%;
     padding:20px;
     margin-left:15px;
