--- a/src/main/webapp/css/trainingToCome.css
+++ b/src/main/webapp/css/trainingToCome.css
@@ -1,18 +1,34 @@
-#test{
+#sessionsPanel{
     height: 420px;
     overflow: hidden;
     z-index: 5;
 }
 
-.showmeonhover { display: none; }
-
-.alwaysshowme:hover .showmeonhover .td {
-    display: block;
-}
-
-.boxMessage{
+.sc-notification {
     position: absolute;
-    left: 30%;
+    left: 2%;
+    background-color: #b8b8b8;
+    text-align: center;
+    color: #fff;
+    line-height: 1.4em;
+    margin: 15px 0 1em;
+    padding: 0.4em 1.2em;
+    border-radius: 1px;
+    font-size: 15px;
+    font-family: helvetica;
+    height: 30px;
 }
 
+.sc-success.sc-notification {
+    background-color: #2ec23e;
+    border: 1px solid #039D14
+}
+
+.sc-success.sc-notification div.headline::before {
+    font-family: FontAwesome;
+    position: relative;
+    content: '\f058';
+    font-size: 20px;
+    padding-right: 10px
+}
 
