[US#GF9] HTML + Adaptation BDD

--- a/src/main/webapp/css/trainingToCome.css
+++ b/src/main/webapp/css/trainingToCome.css
@@ -1,7 +1,7 @@
 /*#trainingToCome {
     border:1px solid #dcdcdc;
     border-radius: 10px;
-    height: 360px;
+    height: 100%;
     width: 550px;
     overflow-y:hidden;
     overflow-x:hidden;
