--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -142,85 +142,25 @@ i.glyphicon {
     text-align: center;
 }
 
-.button,
-.button:visited {
-    background-color: #222;
-    margin-left: 2px;
-    display: inline-block;
-    -moz-border-radius: 4px;
-    -webkit-border-radius: 4px;
-    -moz-box-shadow: 0 1px 2px rgba(0,0,0,0.25);
-    -webkit-box-shadow: 0 1px 2px rgba(0,0,0,0.25);
-    border-bottom: 1px solid rgba(0,0,0,0.25);
-    position: relative;
-    padding-top: 6px;
-    padding-right: 10px;
-    padding-bottom: 5px;
-    padding-left: 10px;
-    color: #fff;
-    text-decoration: none;
-    text-shadow: 1px 1px 1px  rgba(0,0,0,0.45);
-    filter: dropshadow(color= rgba(0,0,0,0.45), offx=1, offy=1);
-    cursor: pointer;
-}
 
-.button:hover {
-    backgroud-color: #111;
-    color: #fff;
-}
-
-.button:active {
-    top: 1px;
-    color: #fff;
-}
-
-.button,
-.button:visited,
-.medium.button,
-.medium.button:visited {
+.button {
     font-size: 11px;
     font-weight: bold;
     line-height: 1;
 }
 
-.large.button,
-.large.button:visited {
+.large.button {
     font-size: 13px;
     padding: 8px 14px 9px;
 }
 
-.blue.button,
-.blue.button:visited {
+.blue.button {
     background-color: #4d7cb9;
     color: #fff;
     border: 1px solid #2a3b8c;
     padding-left: 35px;
     background-image: url(http://css-creations.com/uploads/media/items/8/8y15B9d.png);
     background-repeat: repeat-x;
-}
-
-.blue.button:hover {
-    background-color: #4d7cb9;
-    color: #fff;
-    border: 1px solid #2a3b8c;
-    padding-left: 35px;
-}
-
-.red.button,
-.red.button:visited {
-    background-color: #E64444;
-    color: #fff;
-    border: 1px solid #B63440;
-    padding-left: 35px;
-    background-image: url(http://css-creations.com/uploads/media/items/7/7XUCqDE.png);
-    background-repeat: repeat-x;
-}
-
-.red.button:hover {
-    background-color: #FF4B5A;
-    color: #fff;
-    border: 1px solid #B63440;
-    padding-left: 35px;
 }
 
 #blue-header{
