--- a/src/main/webapp/css/addTrainingTopic.css
+++ b/src/main/webapp/css/addTrainingTopic.css
@@ -82,7 +82,6 @@ a.changecolor{
     width: 100%;
     height: 35px;
     font-size: 80%;
-
 }
 
 #addFormation button:hover {
@@ -999,9 +998,9 @@ ul {
 }
 
 a.boxclose{
-    float: left;
-    margin-top:-50px;
-    margin-left: 160px;
+    position: absolute;
+    top:1px;
+    left:167px;
     cursor:pointer;
     color: #fff;
     border-radius: 50%;
@@ -1018,8 +1017,6 @@ a.boxclose{
 }
 
 .boxclose:before {
-
     content: "×";
-
 }
 
