[develop]  Correction  sur la suppression d'une foramtion

--- a/src/main/webapp/css/addTrainingTopic.css
+++ b/src/main/webapp/css/addTrainingTopic.css
@@ -999,8 +999,8 @@ ul {
 
 a.boxclose{
     position: absolute;
-    top:1px;
-    left:167px;
+    top:2%;
+    left:85%;
     cursor:pointer;
     color: #fff;
     border-radius: 50%;
