--- a/src/main/webapp/css/registerTrainingCollaborator.css
+++ b/src/main/webapp/css/registerTrainingCollaborator.css
@@ -59,10 +59,13 @@ button + p {
 }
 
 .panel-primary{
-    border-color: rgb(210, 210, 210);
+    border-color: rgba(66, 139, 202,0.8);
+
+
 }
 .panel-heading{
-    background-color: rgba(66, 139, 202,0.8) !important;
+    background-color:#FFFFFF !important;
+
 }
 
 #scroll{
