--- a/src/main/webapp/css/collectWishes.css
+++ b/src/main/webapp/css/collectWishes.css
@@ -14,7 +14,7 @@
     padding: .4em .4em .4em .8em;
     *padding: .10em;
     margin: .5em 0 .5em 2.5em;
-    background: #ddd;
+    background: #eee;
     color: #ffffff;
     text-decoration: none;
     transition: all .3s ease-out;
