implement of the micro-service SKILLS

--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -69,6 +69,13 @@ i.glyphicon {
     color: black;
 }
 
+.red-header{
+    background-color: rgb(224,53,89) !important;
+}
+.blue-header{
+    background-color :#428bca;
+}
+
 
 .dialog {
     width: 100%;
@@ -163,6 +170,6 @@ i.glyphicon {
     background-repeat: repeat-x;
 }
 
-#blue-header{
+#header-component{
     height:65px;
 }
