--- a/src/main/webapp/css/profilToUpdate.css
+++ b/src/main/webapp/css/profilToUpdate.css
@@ -1,15 +1,14 @@
 .panel-header{
     background-color: rgba(126,126,126,0.62);
     width: 100%;
-    height: 25px;
+    height: 26px;
     padding-left: 20px;
     padding-top: 4px;
     color:white;
-    font-family: Arial;
+    word-spacing: 0px;
 }
 
 .boxon{
-
 }
 
 .image{
@@ -21,7 +20,6 @@
     height:80px;
     width: 80px;
     z-index:1;
-
 }
 
 
@@ -39,13 +37,9 @@
     opacity: 0.6;
     z-index:2;
     background: black;
-
 }
 
 .boxon:hover .text{
     visibility: visible;
     opacity: 0.6;
-
-
-
 }
