--- a/src/main/webapp/css/profilToUpdate.css
+++ b/src/main/webapp/css/profilToUpdate.css
@@ -13,7 +13,7 @@
 
 .image{
     position:absolute;
-    margin-left:60%;
+    margin-left:420px;
     margin-top:-30px;
     cursor:pointer;
     border-radius: 50%;
