--- a/src/main/webapp/css/registerTrainingCollaborator.css
+++ b/src/main/webapp/css/registerTrainingCollaborator.css
@@ -130,3 +130,7 @@ label.star:hover { transform: rotate(-15deg) scale(1.3); }
 label.star:before {
     content: '\2605';
 }
+
+.notepanel panel.panel-default.panel-heading{
+    background-color: rgba(66, 139, 202,0.8); !important;
+}
