--- a/src/main/webapp/css/collectWishes.css
+++ b/src/main/webapp/css/collectWishes.css
@@ -1,7 +1,7 @@
 #collectWishes {
     border:1px solid #dcdcdc;
     border-radius: 10px;
-    height:100%;
+    height:558px;
     width: 100%;
     padding:20px;
 }
