--- a/src/main/webapp/css/trainingRankingByOpinions.css
+++ b/src/main/webapp/css/trainingRankingByOpinions.css
@@ -25,3 +25,6 @@
     color: #848484;
     font-size:25px;
 }
+#accordionIdAdmin .panel-heading {
+    background-color: rgba(255, 85, 255, 0)!important;
+}
