--- a/src/main/webapp/css/assignCollaborator.css
+++ b/src/main/webapp/css/assignCollaborator.css
@@ -1,3 +1,5 @@
+
+
 #assignCollaborator {
     border:1px solid #dcdcdc;
     border-radius: 10px;
@@ -60,7 +62,7 @@ display:none;
     font-size:0.85em;
 }
 
-#box{
+#goToWish #box{
     position:absolute;
     margin-left:10px;
     margin-top:-10px;
@@ -86,11 +88,11 @@ display:none;
     padding-left: 10px;
 }
 
-#goToRanking a{
+#goToRanking a, #goToWish a{
     color:black;
 }
 
-#goToRanking a:hover{
+#goToRanking a:hover, #goToWish a:hover{
     text-decoration: none;
 }
 #goToRanking a:hover > .glyphicon-star:before{
