--- a/src/main/webapp/css/assignCollaborator.css
+++ b/src/main/webapp/css/assignCollaborator.css
@@ -1,14 +1,14 @@
 
 
 #assignCollaborator {
-    border:1px solid #dcdcdc;
-    border-radius: 10px;
-    height:100%;
+    box-shadow: 0 2px 5px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 3px 3px 0 0;
+    height:42em;
     width: 100%;
     padding:20px;
 }
 .searchCollab .panel-body {
-    height:300px;
+    height:23em;
     width: 100%;
 }
 .searchCollab .searchField .glyphicon-search {
@@ -102,4 +102,160 @@ display:none;
 #goToRanking .glyphicon-star:before{
     color: #ffcf21;
     vertical-align: middle;
+}
+
+.collaboratorsListRight {
+    overflow-y:auto;
+    overflow-x: hidden;
+    height:280px;
+    padding-left: 10px;
+}
+.imageon{
+
+}
+.textt{
+    position: absolute;
+    margin-left:420px;
+    margin-top:-30px;
+    text-align: center;
+    border-radius: 50%;
+    height:80px;
+    width: 80px;
+    font-size: smaller;
+    visibility: hidden;
+    color: white;
+    opacity: 0.6;
+    z-index:2;
+    background: black;
+}
+
+
+
+.imageon:hover{
+    opacity:0.6;
+    visibility: visible;
+}
+
+
+
+.ch-item {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    position: relative;
+    cursor: default;
+    box-shadow:
+            inset 0 0 0 16px rgba(255,255,255,0.6),
+            0 1px 2px rgba(0,0,0,0.1);
+
+    -webkit-transition: all 0.4s ease-in-out;
+    -moz-transition: all 0.4s ease-in-out;
+    -o-transition: all 0.4s ease-in-out;
+    -ms-transition: all 0.4s ease-in-out;
+    transition: all 0.4s ease-in-out;
+}
+
+
+.ch-info {
+    cursor: pointer;
+    position: absolute;
+    background: rgba(63,147,147, 0.8);
+    width: 50px;
+    height: 50px;
+    top:0;
+    border-radius: 50%;
+    opacity: 0;
+
+    -webkit-transition: all 0.4s ease-in-out;
+    -moz-transition: all 0.4s ease-in-out;
+    -o-transition: all 0.4s ease-in-out;
+    -ms-transition: all 0.4s ease-in-out;
+    transition: all 0.4s ease-in-out;
+
+    -webkit-transform: scale(0);
+    -moz-transform: scale(0);
+    -o-transform: scale(0);
+    -ms-transform: scale(0);
+    transform: scale(0);
+
+    -webkit-backface-visibility: hidden;
+
+}
+
+.ch-info h3 {
+    cursor: pointer;
+    position:absolute;
+    margin:0;
+    margin-left: auto;
+    margin-right: auto;
+    width: 45px;
+    text-align: center;
+    color: #ffffff;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-size: 20px;
+    margin: 0 4px;
+    padding: 15px 0 0 0;
+    font-family: 'Open Sans', Arial, sans-serif;
+    text-shadow:
+            0 0 1px #fff,
+            0 1px 2px rgba(0,0,0,0.3);
+}
+
+.ch-info p {
+    color: #38ffa5;
+    padding: 10px 5px;
+    font-style: italic;
+    margin: 0 30px;
+    font-size: 12px;
+    border-top: 1px solid rgba(255,255,255,0.5);
+    opacity: 0;
+    -webkit-transition: all 1s ease-in-out 0.4s;
+    -moz-transition: all 1s ease-in-out 0.4s;
+    -o-transition: all 1s ease-in-out 0.4s;
+    -ms-transition: all 1s ease-in-out 0.4s;
+    transition: all 1s ease-in-out 0.4s;
+}
+
+.ch-info p a {
+    display: block;
+    color: #38ffa5;
+    color: rgba(88, 255, 187, 0.7);
+    font-style: normal;
+    font-weight: 700;
+    text-transform: uppercase;
+    font-size: 9px;
+    letter-spacing: 1px;
+    padding-top: 4px;
+    font-family: 'Open Sans', Arial, sans-serif;
+}
+
+.ch-item:hover {
+    box-shadow:
+            inset 0 0 0 1px rgba(255,255,255,0.1),
+            0 1px 2px rgba(0,0,0,0.1);
+}
+.ch-item:hover .ch-info {
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -o-transform: scale(1);
+    -ms-transform: scale(1);
+    transform: scale(1);
+    opacity: 1;
+}
+
+.ch-item:hover .ch-info p {
+    opacity: 1;
+}
+
+#assignCollaborator .radio,#assignCollaborator .checkbox{
+    background: #18aa8d;
+    color:white;
+    box-shadow: 0 2px 5px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 3px 3px 0 0;
+    margin-bottom: 0;
+}
+
+.panel {
+    border-radius: 3px 3px 0 0;
 }
