--- a/src/main/webapp/css/collectWishes.css
+++ b/src/main/webapp/css/collectWishes.css
@@ -1,7 +1,7 @@
 #collectWishes {
-    border:1px solid #dcdcdc;
-    border-radius: 10px;
-    height:558px;
+    box-shadow: 0 2px 5px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 3px 3px 0 0;
+    height:42em;
     width: 100%;
     padding:20px;
 }
