--- a/src/main/webapp/css/registerTrainingCollaborator.css
+++ b/src/main/webapp/css/registerTrainingCollaborator.css
@@ -1,13 +1,11 @@
 #trainingContainer {
-    border:1px solid #dcdcdc;
-    border-radius: 10px;
-    height:610px;
-    width: 100%;
+    box-shadow: 0 2px 5px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 3px 3px 0 0;
+    width: 100%; height: 43em;
     overflow-y:hidden;
     overflow-x:hidden;
     z-index: -1;
     padding:20px;
-    margin-left:15px;
 }
 
 legend{
