--- a/src/main/webapp/css/admin/addTrainingTopic.css
+++ b/src/main/webapp/css/admin/addTrainingTopic.css
@@ -8,6 +8,19 @@
 
 }
 
+#newFormation input.form-control {
+    padding-right:12px;
+}
+
+#newFormation select.form-control {
+    padding-right:0;
+}
+
+#newFormation td:last-child input{
+    padding-right:70px;
+}
+
+
 table.borderRadius{
     box-shadow: 0 2px 5px 1px rgba(0, 0, 0, 0.2);
     border-radius: 3px 3px 0 0;
