--- a/src/main/webapp/css/admin/assignCollaborator.css
+++ b/src/main/webapp/css/admin/assignCollaborator.css
@@ -1,14 +1,22 @@
-
+#assignCollaboratorContainer {
+    margin-top:30px;
+}
 
 #assignCollaborator {
     box-shadow: 0 2px 5px 1px rgba(0, 0, 0, 0.2);
     border-radius: 3px 3px 0 0;
-    height:42em;
+    height:30.9em;
     width: 100%;
     padding:20px;
+    background: #eeefee;
 }
+
+#assignCollaborator label {
+    font-size:13px;
+}
+
 .searchCollab .panel-body {
-    height:23em;
+    height:16rem;
     width: 100%;
 }
 .searchCollab .searchField .glyphicon-search {
