--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -1,5 +1,10 @@
+body {
+    min-height: 100%;
+    background: transparent;
+}
+
 #wrap {
- margin-bottom:100px;
+ margin-bottom:60px;
 }
 #custom-navbar{
     padding:10px 30px 10px 10px;
